Updated about intro

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <section class="about-intro">
 
                 <h1 class="hi">Hi.<br>
-                    I'm Alexandra.</h1>
+                    I'm Peter.</h1>
                 <h1 class="about-title" hidden>About</h1>
 
                 <p>I'm a frontend developer specialized in JavaScript, ReactJS, Typescript, and VueJS
